<resources>
    <string name="app_name">Barber Brothers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre usuario default</string>
    <string name="nav_header_subtitle">usuarioDefault@android.com</string>
    <string name="nav_header_desc">Barber brothers</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_about">Acerca de la app</string>
    <string name="menu_citas">Citas</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_empleados">Empleados</string>

    <string name="nombre_empresa">Barber Brothers</string>

    <string name="acercaDe">Acerca de la app</string>
    <string name="cerrarSesion">Cerrar sesion</string>
    <string name="contacto_facebook">\@barbershopbrothers</string>
    <string name="contacto_whatsapp1">644–245–21–78</string>
    <string name="contacto_whatsapp2">644–173–08–00</string>


    <string name="buttonSi">Si</string>
    <string name="buttonNo">No</string>
    <string name="buttonAgregar">Agregar</string>
    <string name="buttonCancelar">Cancelar</string>

    <string name="tituloAgregarEmpleado">Detalles del empleado</string>
    <string name="tituloEliminarEmpleado">Eliminar empleado</string>
    <string name="tituloModificarEmpleado">Modificar empleado</string>
    <string name="tituloSeleccionHorario">Seleccione un horario</string>
    <string name="tituloAgregarServicio">Detalles del servicio</string>
    <string name="tituloEliminarServicio">Eliminar servicio</string>
    <string name="tituloAgregarCita">Detalles de la cita</string>
    <string name="tituloEliminarCita">Cancelar cita</string>
    <string name="titleNotificacion">Barber Brothers - Nueva Cita</string>
    <string name="messageNotificacion">Cita registrada para el cliente: </string>
    <string name="messageNotificacion2"> con fecha: </string>


    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="sinHorarios">Sin horarios disponibles para este día</string>

    <string name="tituloCreditos">Las siguientes animaciones fueron descargadas de LottieFiles y pertenecen a sus respectivos creadores</string>
    <string name="creditos1">\@Monika Madurska/LottieFiles</string>
    <string name="creditos2">\@Marconi Loura/LottieFiles</string>
    <string name="creditos3">\@Pablo Vargas Cardenas/LottieFiles</string>
    <string name="creditos4">\@Russ Ian Salas/LottieFiles</string>
    <string name="creditos5">\@Victor Winnhed/LottieFiles</string>
    <string name="creditos6">Contacto del desarrollador: jycc1207@gmail.com</string>

    <string name="operacion_exitosa">Se realizó el registro con éxito</string>
    <string name="operacion_fallida">Ocurrió un error. Porfavor inténtelo de nuevo más tarde</string>
    <string name="empalmeCitas">No se pudo realizar el registro porque existiría un empalme de citas</string>
    <string name="precio">Precio: $</string>
    <string name="duracionAproximada">Duración aproximada: </string>
    <string name="minutos"> minutos</string>
    <string name="fechaSeleccionada">Fecha seleccionada: </string>
    <string name="hora">Hora: </string>

    <string name="avisoInternet">Porfavor revise su conexión a internet</string>
    <string name="avisoCita">Porfavor seleccione los detalles de la cita</string>

    <string name="seleccionEmpleado">Hacer una cita con este empleado</string>

    <string name="home_second">Home Second</string>
    <string name="disponible">Hora Disponible</string>
    <string name="web_client_id">1044259338690-f8pf174ojakh8q1t7ipmaurqaau2l3ii.apps.googleusercontent.com</string>
    <string name="preference_file_key">com.cervantes.jonatan.pruebahorario.ROL_USUARIO</string>
    <string name="rol_usuario">rol</string>


    <!-- Strings para los horarios -->

<!--    <string-array name="horarios">-->
<!--        <item>11</item>-->
<!--        <item>12</item>-->
<!--        <item>13</item>-->
<!--        <item>14</item>-->
<!--        <item>15</item>-->
<!--        <item>16</item>-->
<!--        <item>17</item>-->
<!--        <item>18</item>-->
<!--        <item>19</item>-->
<!--        <item>20</item>-->
<!--    </string-array>-->

    <string-array name="horariosMinutos">
        <item name="minutos1">00</item>
        <item name="minutos2">10</item>
        <item name="minutos3">20</item>
        <item name="minutos4">30</item>
        <item name="minutos5">40</item>
        <item name="minutos6">50</item>
    </string-array>


    <string-array name="arreglo_empleados">
        <item>Empleado</item>
        <item>Yael</item>
        <item>Jonatan</item>
        <item>Cervantes</item>
    </string-array>

    <string-array name="arreglo_servicios">
        <item>Servicio</item>
        <item>Servicio 1</item>
        <item>Servicio 2</item>
        <item>Servicio 3</item>
    </string-array>

</resources>
