<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layoutsMargin"
    android:background="@drawable/background_citas_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layoutsPadding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tituloCancelar"
            android:text="@string/tituloEliminarCita"
            android:gravity="center"
            android:layout_margin="@dimen/layoutsMargin"
            android:textSize="@dimen/titlesTextSize"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_avisoCancelacion"
            android:text="¿Está seguro que quiere cancelar la cita? Podría ser penalizado si cancela muy frecuentemente"
            android:layout_margin="@dimen/layoutsMargin"
            android:textSize="@dimen/regularDialogTextSize"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/layoutsMargin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_no"
                android:text="@string/buttonNo"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/horizontalMarginButtons"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_si"
                android:text="@string/buttonSi"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/horizontalMarginButtons"
                />

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>
