<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layoutsMargin"
    android:background="@drawable/background_empleados_dialog"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layoutsPadding"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tituloModificarEmpleado"
            android:text="@string/tituloModificarEmpleado"
            android:gravity="center"
            android:layout_margin="@dimen/layoutsMargin"
            android:textSize="@dimen/titlesTextSize"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_avisoModificarEmpleado"
            android:layout_gravity="center"
            android:textSize="@dimen/regularDialogTextSize"
            android:text="¿Está seguro que quiere modificar el empleado?"
            android:layout_margin="@dimen/layoutsMargin"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_disponible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disponible"
                />
            <RadioButton
                android:id="@+id/rb_ocupado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ocupado"
                />
            <RadioButton
                android:id="@+id/rb_fueraDeTurno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fuera de turno"
                />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/layoutsMargin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_noModificarEmpleado"
                android:text="@string/buttonNo"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/horizontalMarginButtons"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_siModificarEmpleado"
                android:text="@string/buttonSi"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/horizontalMarginButtons"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
